added <hr> and section breaks to index.html

--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
             <li>git <strong>commit -m</strong> 'message regarding reasons for update(s)'</li>
             <li>git <strong>push</strong></li>
         </ol>
+        <hr>
     </section>
 
+    <section>
     <h3>Initial set up of GIT:</h3>
     <ol>
         <li>git <strong>--version</strong> - will show whether GIT is installed, if not Install GIT* then continue with
@@ -97,6 +99,7 @@
         <li>git <strong>restore</strong> 'filename' - removes the file 'filename' from the commit.</li>
     </ul>
     <hr>
+</section>
 
     <footer>
 
