added caveat to git push command on line 37 of index.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <ol>
             <li>git <strong>add</strong> filename(s) or '.'</li>
             <li>git <strong>commit -m</strong> 'message regarding reasons for update(s)'</li>
-            <li>git <strong>push</strong></li>
+            <li>git <strong>push</strong> - assuming you're on the relevant active branch (git status)</li>
         </ol>
         <hr>
     </section>
